Final Updates for Brenitosh School

--- a/community.html
+++ b/community.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Home - Brenitoch</title>
+  <title>home - Brenitoch</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -44,32 +44,35 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="index.html" class="active">Our School</a></li>
           <li class="dropdown"><a href="about.html"><span>About</span> <i
                 class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
-              <li><a href="students-life.html">Student Life</a></li>
-              <li><a href="campus-facilities.html">School Facilities &amp; Programs</a></li>
+              <li><a href="students-life.html">Extra-Curricular</a></li>
+              <li><a href="our-facilities.html">School Facilities &amp; Programs</a></li>
 
             </ul>
           </li>
 
-          <li><a href="admissions.html">Admissions</a></li>
+          <li class="dropdown">
+            <a href="admissions.html"><span>Admissions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="admissions.html">Admission Process</a></li>
+              <li><a href="fees.html">Fees</a></li>
+            </ul>
+          </li>
           <li><a href="academics.html">Academics</a></li>
           <li><a href="events.html">Events</a></li>
-          <li><a href="alumni.html">Alumni</a></li>
           <li><a href="employ.html">Employment</a></li>
           <li class="dropdown"><a href="#"><span>Quick Links</span> <i
                 class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="select-btw.html">Business plan &amp; school polices</a></li>
-              <li><a href="blog.html">Blog</a></li>
               <li><a href="accomodation.html">Student Accommodation Info</a></li>
               <li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
-              <li><a href="portal.html">Portal Login</a></li>
               <li><a href="community.html">Community Engagement</a></li>
-              <li><a href="news.html">News</a></li>
+              <li><a href="portal.html">Portal Login</a></li>
             </ul>
           </li>
 
@@ -86,13 +89,13 @@
     <div class="page-title dark-background" style="background-image: url(assets/img/community-engagement/unity.jpeg);">
       <div class="container position-relative">
         <h1>Community &amp; Partnerships</h1>
-        <p>
+        <!-- <p>
           Together, we nurture a culture of connection, collaboration, and care — building a vibrant Brenitoch community
           that inspires every learner to thrive.
-        </p>
+        </p> -->
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Our School</a></li>
             <li class="current">Community</li>
           </ol>
         </nav>
@@ -106,7 +109,8 @@
       <div class="container" data-aos="fade-up">
         <div class="row align-items-center g-4">
           <div class="col-lg-6">
-            <img src="assets/img/community-engagement/diversity.jpeg" alt="Brenitoch Community" class="img-fluid rounded-3 shadow-sm">
+            <img src="assets/img/community-engagement/diversity.jpeg" alt="Brenitoch Community"
+              class="img-fluid rounded-3 shadow-sm">
           </div>
           <div class="col-lg-6">
             <h2 class="mb-3">Our Community Spirit</h2>
@@ -147,7 +151,7 @@
               <h4>Parents & Families</h4>
               <p>
                 We value parents as essential partners in education. Through open communication, events, and shared
-                activities, families play a key role in shaping our school culture.
+                activities, families play a key role in shaping home culture.
               </p>
             </div>
           </div>
@@ -231,21 +235,8 @@
         </div>
       </div>
     </section>
-    <!-- /Engagement & Events -->
-          <div class="col-md-4">
-            <div class="card shadow-sm h-100 border-0">
-              <img src="assets/img/community-engagement/contectivity.jpeg" class="card-img-top" alt="Cultural Event">
-              <div class="card-body">
-                <h5 class="card-title">Cultural & Sports Events</h5>
-                <p class="card-text">
-                  Brenitoch celebrates diversity through arts, music, and sports days — bringing families and friends
-                  together in joy and unity.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+    </div>
+    </div>
     </section>
     <!-- /Engagement & Events -->
 
@@ -295,7 +286,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Quick Links</h4>
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Our School</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="admissions.html">Admissions</a></li>
             <li><a href="academics.html">Academics</a></li>
@@ -307,7 +298,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Academics</h4>
           <ul>
-            <li><a href="campus-facilities.html">School Facilities</a></li>
+            <li><a href="our-facilities.html">School Facilities</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="community.html">Community Engagement</a></li>
             <li><a href="news.html">News & Updates</a></li>
@@ -321,7 +312,6 @@
             <li><a href="privacy.html">Privacy Policy</a></li>
             <li><a href="feedback.html">Feedback</a></li>
             <li><a href="portal.html">Portal Login</a></li>
-            <li><a href="alumni.html">Alumni</a></li>
           </ul>
         </div>
 
@@ -331,7 +321,7 @@
           <ul>
             <li><a href="financial-aid.html">Financial Aid</a></li>
             <li><a href="select-btw.html">Business plan &amp; school polices</a></li>
-            <li><a href="student-life.html">Student Life</a></li>
+            <li><a href="student-life.html">Extra-Curricular</a></li>
             <li><a href="employ.html">Employment</a></li>
           </ul>
         </div>
