--- a/employ.html
+++ b/employ.html
@@ -35,53 +35,52 @@
 
 <body class="employ-page">
 
- 
-	  <header id="header" class="header d-flex align-items-center fixed-top">
-        <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-            <a href="index.html" class="logo d-flex align-items-center">
-                <!-- Uncomment the line below if you also wish to use an image logo -->
-                <img src="assets/img/logoo.png" alt="School Logo">
-            </a>
+  <header id="header" class="header d-flex align-items-center fixed-top">
+    <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-            <nav id="navmenu" class="navmenu">
-                <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li class="dropdown"><a href="about.html"><span>About</span> <i
-                                class="bi bi-chevron-down toggle-dropdown"></i></a>
-                        <ul>
-                            <li><a href="about.html">About Us</a></li>
-                            <li><a href="students-life.html">Student Life</a></li>
-                            <li><a href="campus-facilities.html">School Facilities &amp; Programs</a></li>
+      <a href="index.html" class="logo d-flex align-items-center">
+        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <img src="assets/img/logoo.png" alt="School Logo">
+      </a>
 
-                        </ul>
-                    </li>
+      <nav id="navmenu" class="navmenu">
+        <ul>
+          <li><a href="index.html" class="active">Our School</a></li>
+          <li><a href="about.html" class="active">About Us</a></li>
 
-                    <li><a href="admissions.html">Admissions</a></li>
-                    <li><a href="academics.html">Academics</a></li>
-                    <li><a href="events.html">Events</a></li>
-                    <li><a href="alumni.html">Alumni</a></li>
-                    <li><a href="employ.html">Employment</a></li>
-                    <li class="dropdown"><a href="#"><span>Quick Links</span> <i
-                                class="bi bi-chevron-down toggle-dropdown"></i></a>
-                        <ul>
-                            <li><a href="select-btw.html">Business plan &amp; school polices</a></li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="accomodation.html">Student Accommodation Info</a></li>
-                            <li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
-                            <li><a href="portal.html">Portal Login</a></li>
-                            <li><a href="community.html">Community Engagement</a></li>
-                            <li><a href="news.html">News</a></li>
-                        </ul>
-                    </li>
+          <li class="dropdown">
+            <a href="admissions.html"><span>Admissions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="admissions.html">Admission Process</a></li>
+              <li><a href="fees.html">Fees</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="academics.html"><span>Academics</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="academics.html">Academics</a></li>
+              <li><a href="students-life.html">Extra-Curricular</a></li>
+            </ul>
+          </li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="employ.html">Employment</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li class="dropdown"><a href="#"><span>Quick Links</span> <i
+                class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="accomodation.html">Student Accommodation Info</a></li>
+              <li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
+              <li><a href="community.html">Community Engagement</a></li>
+              <li><a href="portal.html">Portal Login</a></li>
+            </ul>
+          </li>
+        </ul>
+        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+      </nav>
 
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-                <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-            </nav>
-
-        </div>
-    </header>
+    </div>
+  </header>
 
   <main class="main">
 
@@ -89,10 +88,10 @@
     <div class="page-title dark-background" style="background-image: url(assets/img/education/showcase-1.webp);">
       <div class="container position-relative">
         <h1>Employment Opportunities</h1>
-        <p>Teaching. Learning. Living. Growing together as part of the Breinitoch family.</p>
+        <!-- <p>Teaching. Learning. Living. Growing together as part of the Breinitoch family.</p> -->
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Our School</a></li>
             <li class="current">Employment</li>
           </ol>
         </nav>
@@ -102,107 +101,6 @@
     <!-- Employment Section -->
     <section id="employment" class="employment section">
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <!-- Employment Hero -->
-        <div class="employment-hero">
-          <div class="row align-items-center">
-            <div class="col-lg-7" data-aos="fade-up" data-aos-delay="200">
-              <div class="hero-content">
-                <span class="employment-badge">Join Our Team</span>
-                <h2>Shape the Future of Education</h2>
-                <p>
-                  At Breinitoch Schools in Juja, Kiambu County, we’re building a community of passionate educators and
-                  professionals dedicated to fostering academic excellence, innovation, and holistic student
-                  development. Join us as we prepare to welcome our first students in 2026.
-                </p>
-                <div class="employment-metrics">
-                  <div class="metric">
-                    <span class="counter">2026</span>
-                    <span class="label">Opening Year</span>
-                  </div>
-                  <div class="metric">
-                    <span class="counter">50+</span>
-                    <span class="label">Positions Available</span>
-                  </div>
-                  <div class="metric">
-                    <span class="counter">1</span>
-                    <span class="label">Vision — Empowering Futures</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="300">
-              <div class="hero-image-wrapper">
-                <img src="assets/img/education/teaching-staff-group.jpeg" alt="Breinitoch Teaching Team"
-                  class="img-fluid rounded">
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Teaching, Learning, and Living Section -->
-        <div class="teaching-living mt-5">
-          <div class="section-header text-center" data-aos="fade-up" data-aos-delay="100">
-            <h3>Teaching, Learning, and Living</h3>
-            <p>Join a supportive environment that values professional growth, work-life balance, and community impact.
-            </p>
-          </div>
-          <div class="row gy-4">
-            <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-              <div class="living-card">
-                <div class="card-icon"><i class="bi bi-book-half"></i></div>
-                <h4>Teaching Excellence</h4>
-                <p>Deliver innovative, student-centered instruction using modern tools and methodologies.</p>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
-              <div class="living-card">
-                <div class="card-icon"><i class="bi bi-lightbulb-fill"></i></div>
-                <h4>Continuous Learning</h4>
-                <p>Access ongoing professional development, workshops, and mentorship programs.</p>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
-              <div class="living-card">
-                <div class="card-icon"><i class="bi bi-house-door-fill"></i></div>
-                <h4>Living and Wellness</h4>
-                <p>Enjoy on-campus housing options and wellness programs for work-life balance.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Professional and Community Expectations -->
-        <div class="expectations mt-5">
-          <div class="section-header text-center" data-aos="fade-up" data-aos-delay="100">
-            <h3>Professional and Community Expectations</h3>
-            <p>We uphold high standards to create a positive impact on students and the wider community.</p>
-          </div>
-          <div class="row gy-4">
-            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-              <div class="expectation-card">
-                <h4>Professional Expectations</h4>
-                <ul>
-                  <li>Maintain high ethical standards and professionalism.</li>
-                  <li>Commit to innovative teaching and continuous improvement.</li>
-                  <li>Collaborate with colleagues for a supportive work environment.</li>
-                  <li>Contribute to curriculum development and school policies.</li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
-              <div class="expectation-card">
-                <h4>Community Expectations</h4>
-                <ul>
-                  <li>Engage in community service and outreach programs.</li>
-                  <li>Promote inclusivity and respect for diverse backgrounds.</li>
-                  <li>Participate in school events and parent-teacher collaborations.</li>
-                  <li>Build a positive school culture and reputation.</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
 
         <!-- Open Employment Opportunities -->
         <div class="open-positions mt-5">
@@ -524,7 +422,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Quick Links</h4>
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Our School</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="admissions.html">Admissions</a></li>
             <li><a href="academics.html">Academics</a></li>
@@ -536,7 +434,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Academics</h4>
           <ul>
-            <li><a href="campus-facilities.html">School Facilities</a></li>
+            <li><a href="our-facilities.html">School Facilities</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="community.html">Community Engagement</a></li>
             <li><a href="news.html">News & Updates</a></li>
@@ -550,7 +448,6 @@
             <li><a href="privacy.html">Privacy Policy</a></li>
             <li><a href="feedback.html">Feedback</a></li>
             <li><a href="portal.html">Portal Login</a></li>
-            <li><a href="alumni.html">Alumni</a></li>
           </ul>
         </div>
 
@@ -559,8 +456,7 @@
           <h4>Support</h4>
           <ul>
             <li><a href="financial-aid.html">Financial Aid</a></li>
-            <li><a href="select-btw.html">Business plan &amp; school polices</a></li>
-            <li><a href="student-life.html">Student Life</a></li>
+            <li><a href="student-life.html">Extra-Curricular</a></li>
             <li><a href="employ.html">Employment</a></li>
           </ul>
         </div>
