--- a/scholarship-aid.html
+++ b/scholarship-aid.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Home - Brenitoch</title>
+    <title>home - Brenitoch</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
 
@@ -43,21 +43,27 @@
 
             <nav id="navmenu" class="navmenu">
                 <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="index.html" class="active">Our School</a></li>
                     <li class="dropdown"><a href="about.html"><span>About</span> <i
                                 class="bi bi-chevron-down toggle-dropdown"></i></a>
                         <ul>
                             <li><a href="about.html">About Us</a></li>
-                            <li><a href="students-life.html">Student Life</a></li>
-                            <li><a href="campus-facilities.html">School Facilities &amp; Programs</a></li>
+                            <li><a href="students-life.html">Extra-Curricular</a></li>
+                            <li><a href="our-facilities.html">School Facilities &amp; Programs</a></li>
 
                         </ul>
                     </li>
 
-                    <li><a href="admissions.html">Admissions</a></li>
+                    <li class="dropdown">
+                        <a href="admissions.html"><span>Admissions</span> <i
+                                class="bi bi-chevron-down toggle-dropdown"></i></a>
+                        <ul>
+                            <li><a href="admissions.html">Admission Process</a></li>
+                            <li><a href="fees.html">Fees</a></li>
+                        </ul>
+                    </li>
                     <li><a href="academics.html">Academics</a></li>
                     <li><a href="events.html">Events</a></li>
-                    <li><a href="alumni.html">Alumni</a></li>
                     <li><a href="employ.html">Employment</a></li>
                     <li class="dropdown"><a href="#"><span>Quick Links</span> <i
                                 class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -68,7 +74,6 @@
                             <li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
                             <li><a href="portal.html">Portal Login</a></li>
                             <li><a href="community.html">Community Engagement</a></li>
-                            <li><a href="news.html">News</a></li>
                         </ul>
                     </li>
 
@@ -86,11 +91,11 @@
         <div class="page-title dark-background" style="background-image: url(assets/img/education/showcase-1.webp);">
             <div class="container position-relative">
                 <h1>Financial Aid & Scholarships</h1>
-                <p>Making quality education accessible to all deserving students through comprehensive financial support
-                    programs</p>
+                <!-- <p>Making quality education accessible to all deserving students through comprehensive financial support
+                    programs</p> -->
                 <nav class="breadcrumbs">
                     <ol>
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html">Our School</a></li>
                         <li class="current">Financial Aid & Scholarships</li>
                     </ol>
                 </nav>
@@ -200,7 +205,7 @@
                                 <div class="card-body p-4">
                                     <ol class="application-steps">
                                         <li><strong>Complete the Application Form:</strong> Download and fill out our
-                                            Financial Aid Application Form available on our website.</li>
+                                            Financial Aid Application Form available on our website. <a href="/" class="bi bi-download"> Link</a></li>
                                         <li><strong>Gather Required Documents:</strong> Collect supporting documents
                                             including income statements, student's academic records, and recommendation
                                             letters.</li>
@@ -326,7 +331,7 @@
                 <div class="col-lg-2 col-md-3 footer-links">
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html">Our School</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="admissions.html">Admissions</a></li>
                         <li><a href="academics.html">Academics</a></li>
@@ -338,7 +343,7 @@
                 <div class="col-lg-2 col-md-3 footer-links">
                     <h4>Academics</h4>
                     <ul>
-                        <li><a href="campus-facilities.html">School Facilities</a></li>
+                        <li><a href="our-facilities.html">School Facilities</a></li>
                         <li><a href="events.html">Events</a></li>
                         <li><a href="community.html">Community Engagement</a></li>
                         <li><a href="news.html">News & Updates</a></li>
@@ -352,7 +357,6 @@
                         <li><a href="privacy.html">Privacy Policy</a></li>
                         <li><a href="feedback.html">Feedback</a></li>
                         <li><a href="portal.html">Portal Login</a></li>
-                        <li><a href="alumni.html">Alumni</a></li>
                     </ul>
                 </div>
 
@@ -362,7 +366,7 @@
                     <ul>
                         <li><a href="financial-aid.html">Financial Aid</a></li>
                         <li><a href="select-btw.html">Business plan &amp; school polices</a></li>
-                        <li><a href="student-life.html">Student Life</a></li>
+                        <li><a href="student-life.html">Extra-Curricular</a></li>
                         <li><a href="employ.html">Employment</a></li>
                     </ul>
                 </div>
