--- a/students-life.html
+++ b/students-life.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Home - Brenitoch</title>
+  <title>home - Brenitoch</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -34,51 +34,58 @@
 <body class="students-life-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
-        <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+    <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-            <a href="index.html" class="logo d-flex align-items-center">
-                <!-- Uncomment the line below if you also wish to use an image logo -->
-                <img src="assets/img/logoo.png" alt="School Logo">
-            </a>
+      <a href="index.html" class="logo d-flex align-items-center">
+        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <img src="assets/img/logoo.png" alt="School Logo">
+      </a>
 
-            <nav id="navmenu" class="navmenu">
-                <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li class="dropdown"><a href="about.html"><span>About</span> <i
-                                class="bi bi-chevron-down toggle-dropdown"></i></a>
-                        <ul>
-                            <li><a href="about.html">About Us</a></li>
-                            <li><a href="students-life.html">Student Life</a></li>
-                            <li><a href="campus-facilities.html">School Facilities &amp; Programs</a></li>
+      <nav id="navmenu" class="navmenu">
+        <ul>
+          <li><a href="index.html" class="active">Our School</a></li>
+          <!-- <li class="dropdown"><a href="about.html"><span>About</span> <i
+                class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="our-facilities.html">School Facilities &amp; Programs</a></li>
 
-                        </ul>
-                    </li>
+            </ul>
+          </li> -->
+          <li><a href="about.html" class="active">About Us</a></li>
 
-                    <li><a href="admissions.html">Admissions</a></li>
-                    <li><a href="academics.html">Academics</a></li>
-                    <li><a href="events.html">Events</a></li>
-                    <li><a href="alumni.html">Alumni</a></li>
-                    <li><a href="employ.html">Employment</a></li>
-                    <li class="dropdown"><a href="#"><span>Quick Links</span> <i
-                                class="bi bi-chevron-down toggle-dropdown"></i></a>
-                        <ul>
-                            <li><a href="select-btw.html">Business plan &amp; school polices</a></li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="accomodation.html">Student Accommodation Info</a></li>
-                            <li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
-                            <li><a href="portal.html">Portal Login</a></li>
-                            <li><a href="community.html">Community Engagement</a></li>
-                            <li><a href="news.html">News</a></li>
-                        </ul>
-                    </li>
+          <li class="dropdown">
+            <a href="admissions.html"><span>Admissions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="admissions.html">Admission Process</a></li>
+              <li><a href="fees.html">Fees</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="academics.html"><span>Academics</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="academics.html">Academics</a></li>
+              <li><a href="students-life.html">Extra-Curricular</a></li>
+            </ul>
+          </li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="employ.html">Employment</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li class="dropdown"><a href="#"><span>Quick Links</span> <i
+                class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="accomodation.html">Student Accommodation Info</a></li>
+              <li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
+              <li><a href="community.html">Community Engagement</a></li>
+              <li><a href="portal.html">Portal Login</a></li>
+            </ul>
+          </li>
+        </ul>
+        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+      </nav>
 
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-                <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-            </nav>
-
-        </div>
-    </header>
+    </div>
+  </header>
 
   <main class="main">
 
@@ -86,14 +93,14 @@
     <div class="page-title dark-background position-relative"
       style="background-image: url(assets/img/education/showcase-1.webp);">
       <div class="container position-relative">
-        <h1>Student Life</h1>
-        <p>
-          At Brenitoch, student life is a dynamic blend of learning, creativity, and growth—where every experience
+        <h1>Extra-Curricular</h1>
+        <!-- <p>
+          At Brenitoch, Extra-Curricular is a dynamic blend of learning, creativity, and growth—where every experience
           inspires excellence and lasting connections.
-        </p>
+        </p> -->
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Our School</a></li>
             <li class="current">Students Life</li>
           </ol>
         </nav>
@@ -105,16 +112,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-        <!-- Hero Banner -->
-        <div class="students-life-banner" data-aos="zoom-in" data-aos-delay="200">
-          <div class="banner-content" data-aos="fade-right" data-aos-delay="300">
-            <h2>Experience the School Life</h2>
-            <p>
-              Experience a vibrant school life filled with learning, creativity, and lasting friendships.
-            </p>
-          </div>
-          <img src="assets/img/education/showcase-2.webp" alt="Campus Life" class="img-fluid">
-        </div>
+        
 
         <!-- Life Categories -->
         <div class="life-categories mt-5" data-aos="fade-up" data-aos-delay="200">
@@ -466,7 +464,6 @@
                     <div class="icon">
                       <i class="bi bi-briefcase"></i>
                     </div>
-                    <h5>Business plan &amp; school polices</h5>
                     <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vivamus sagittis lacus vel augue.
                     </p>
                     <a href="#" class="service-link">Learn More <i class="bi bi-arrow-right"></i></a>
@@ -510,7 +507,7 @@
           </div>
         </div>
 
-        <!-- Student Life Gallery -->
+        <!-- Extra-Curricular Gallery -->
         <div class="students-life-gallery mt-5" data-aos="fade-up" data-aos-delay="200">
           <div class="section-header text-center">
             <h3>Life at School</h3>
@@ -520,7 +517,8 @@
           <div class="row g-3">
             <div class="col-md-4" data-aos="zoom-in" data-aos-delay="100">
               <a href="assets/img/education/school-events.jpeg" class="gallery-item glightbox">
-                <img src="assets/img/education/school-events.jpeg" class="img-fluid" loading="lazy" alt="Student Life">
+                <img src="assets/img/education/school-events.jpeg" class="img-fluid" loading="lazy"
+                  alt="Extra-Curricular">
                 <div class="gallery-overlay">
                   <span>School Events</span>
                 </div>
@@ -530,7 +528,7 @@
             <div class="col-md-4" data-aos="zoom-in" data-aos-delay="200">
               <a href="assets/img/education/athletics/chess.jpeg" class="gallery-item glightbox">
                 <img src="assets/img/education/athletics/chess.jpeg" class="img-fluid" loading="lazy"
-                  alt="Student Life">
+                  alt="Extra-Curricular">
                 <div class="gallery-overlay">
                   <span>Student Clubs</span>
                 </div>
@@ -539,7 +537,7 @@
 
             <div class="col-md-4" data-aos="zoom-in" data-aos-delay="300">
               <a href="assets/img/education/graduation.jpeg" class="gallery-item glightbox">
-                <img src="assets/img/education/graduation.jpeg" class="img-fluid" loading="lazy" alt="Student Life">
+                <img src="assets/img/education/graduation.jpeg" class="img-fluid" loading="lazy" alt="Extra-Curricular">
                 <div class="gallery-overlay">
                   <span>Graduation Day</span>
                 </div>
@@ -548,7 +546,8 @@
 
             <div class="col-md-6" data-aos="zoom-in" data-aos-delay="400">
               <a href="assets/img/education/study-groups.jpeg" class="gallery-item glightbox">
-                <img src="assets/img/education/study-groups.jpeg" class="img-fluid" loading="lazy" alt="Student Life">
+                <img src="assets/img/education/study-groups.jpeg" class="img-fluid" loading="lazy"
+                  alt="Extra-Curricular">
                 <div class="gallery-overlay">
                   <span>Study Groups</span>
                 </div>
@@ -557,7 +556,8 @@
 
             <div class="col-md-6" data-aos="zoom-in" data-aos-delay="500">
               <a href="assets/img/education/lab-facility.jpeg" class="gallery-item glightbox">
-                <img src="assets/img/education/lab-facility.jpeg" class="img-fluid" loading="lazy" alt="Student Life">
+                <img src="assets/img/education/lab-facility.jpeg" class="img-fluid" loading="lazy"
+                  alt="Extra-Curricular">
                 <div class="gallery-overlay">
                   <span>School Facilities</span>
                 </div>
@@ -623,7 +623,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Quick Links</h4>
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Our School</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="admissions.html">Admissions</a></li>
             <li><a href="academics.html">Academics</a></li>
@@ -635,7 +635,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Academics</h4>
           <ul>
-            <li><a href="campus-facilities.html">School Facilities</a></li>
+            <li><a href="our-facilities.html">School Facilities</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="community.html">Community Engagement</a></li>
             <li><a href="news.html">News & Updates</a></li>
@@ -646,10 +646,8 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Resources</h4>
           <ul>
-            <li><a href="privacy.html">Privacy Policy</a></li>
             <li><a href="feedback.html">Feedback</a></li>
             <li><a href="portal.html">Portal Login</a></li>
-            <li><a href="alumni.html">Alumni</a></li>
           </ul>
         </div>
 
@@ -658,8 +656,7 @@
           <h4>Support</h4>
           <ul>
             <li><a href="financial-aid.html">Financial Aid</a></li>
-            <li><a href="select-btw.html">Business plan &amp; school polices</a></li>
-            <li><a href="student-life.html">Student Life</a></li>
+            <li><a href="student-life.html">Extra-Curricular</a></li>
             <li><a href="employ.html">Employment</a></li>
           </ul>
         </div>
