--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Home - Brenitoch</title>
+  <title>home - Brenitoch</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -43,13 +43,13 @@
 
             <nav id="navmenu" class="navmenu">
                 <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="index.html" class="active">home</a></li>
                     <li class="dropdown"><a href="about.html"><span>About</span> <i
                                 class="bi bi-chevron-down toggle-dropdown"></i></a>
                         <ul>
                             <li><a href="about.html">About Us</a></li>
-                            <li><a href="students-life.html">Student Life</a></li>
-                            <li><a href="campus-facilities.html">School Facilities &amp; Programs</a></li>
+                            <li><a href="students-life.html">Extra-Curricular</a></li>
+                            <li><a href="our-facilities.html">School Facilities &amp; Programs</a></li>
 
                         </ul>
                     </li>
@@ -68,7 +68,6 @@
                             <li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
                             <li><a href="portal.html">Portal Login</a></li>
                             <li><a href="community.html">Community Engagement</a></li>
-                            <li><a href="news.html">News</a></li>
                         </ul>
                     </li>
 
@@ -89,7 +88,7 @@
       <p>Stay informed with the latest news, insights, and stories from our vibrant school community</p>
       <nav class="breadcrumbs">
         <ol>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">home</a></li>
           <li class="current">Blog</li>
         </ol>
       </nav>
@@ -189,7 +188,7 @@
                   <i class="bi bi-heart"></i>
                   <div>
                     <h4>Culture of Care</h4>
-                    <p>Respect, empathy, and support form the foundation of our school community</p>
+                    <p>Respect, empathy, and support form the foundation of home community</p>
                   </div>
                 </div>
               </div>
@@ -198,7 +197,7 @@
             <div class="content-section" id="values" data-aos="fade-up">
               <h2>Core Values That Guide Us</h2>
               <p>
-                At Brenitoch School, our core values aren't just words on a wall—they guide every decision, interaction, and program we implement. These values shape our school culture and define who we are as an educational community.
+                At Brenitoch School, our core values aren't just words on a wall—they guide every decision, interaction, and program we implement. These values shape home culture and define who we are as an educational community.
               </p>
 
               <div class="key-principles">
@@ -401,7 +400,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Quick Links</h4>
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">home</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="admissions.html">Admissions</a></li>
             <li><a href="academics.html">Academics</a></li>
@@ -413,7 +412,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Academics</h4>
           <ul>
-            <li><a href="campus-facilities.html">School Facilities</a></li>
+            <li><a href="our-facilities.html">School Facilities</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="community.html">Community Engagement</a></li>
             <li><a href="news.html">News & Updates</a></li>
@@ -437,7 +436,7 @@
           <ul>
             <li><a href="financial-aid.html">Financial Aid</a></li>
             <li><a href="select-btw.html">Business plan &amp; school polices</a></li>
-            <li><a href="student-life.html">Student Life</a></li>
+            <li><a href="student-life.html">Extra-Curricular</a></li>
             <li><a href="employ.html">Employment</a></li>
           </ul>
         </div>
