--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Home - Brenitoch</title>
+  <title>home - Brenitoch</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -33,62 +33,54 @@
 
 <body class="contact-page">
   <header id="header" class="header d-flex align-items-center fixed-top">
-        <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+    <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-            <a href="index.html" class="logo d-flex align-items-center">
-                <!-- Uncomment the line below if you also wish to use an image logo -->
-                <img src="assets/img/logoo.png" alt="School Logo">
-            </a>
+      <a href="index.html" class="logo d-flex align-items-center">
+        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <img src="assets/img/logoo.png" alt="School Logo">
+      </a>
 
-            <nav id="navmenu" class="navmenu">
-                <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li class="dropdown"><a href="about.html"><span>About</span> <i
-                                class="bi bi-chevron-down toggle-dropdown"></i></a>
-                        <ul>
-                            <li><a href="about.html">About Us</a></li>
-                            <li><a href="students-life.html">Student Life</a></li>
-                            <li><a href="campus-facilities.html">School Facilities &amp; Programs</a></li>
+      <nav id="navmenu" class="navmenu">
+        <ul>
+          <li><a href="index.html" class="active">Our School</a></li>
+          <li><a href="about.html" class="active">About Us</a></li>
 
-                        </ul>
-                    </li>
+          <li class="dropdown">
+            <a href="admissions.html"><span>Admissions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="admissions.html">Admission Process</a></li>
+              <li><a href="fees.html">Fees</a></li>
+            </ul>
+          </li>
+          <li><a href="academics.html">Academics</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="employ.html">Employment</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li class="dropdown"><a href="#"><span>Quick Links</span> <i
+                class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="select-btw.html">Business plan &amp; school polices</a></li>
+              <li><a href="accomodation.html">Student Accommodation Info</a></li>
+              <li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
+              <li><a href="community.html">Community Engagement</a></li>
+              <li><a href="portal.html">Portal Login</a></li>
+            </ul>
+          </li>
+        </ul>
+        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+      </nav>
 
-                    <li><a href="admissions.html">Admissions</a></li>
-                    <li><a href="academics.html">Academics</a></li>
-                    <li><a href="events.html">Events</a></li>
-                    <li><a href="alumni.html">Alumni</a></li>
-                    <li><a href="employ.html">Employment</a></li>
-                    <li class="dropdown"><a href="#"><span>Quick Links</span> <i
-                                class="bi bi-chevron-down toggle-dropdown"></i></a>
-                        <ul>
-                            <li><a href="select-btw.html">Business plan &amp; school polices</a></li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="accomodation.html">Student Accommodation Info</a></li>
-                            <li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
-                            <li><a href="portal.html">Portal Login</a></li>
-                            <li><a href="community.html">Community Engagement</a></li>
-                            <li><a href="news.html">News</a></li>
-                        </ul>
-                    </li>
-
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-                <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-            </nav>
-
-        </div>
-    </header>
+    </div>
+  </header>
   <main class="main">
 
     <!-- Page Title -->
     <div class="page-title dark-background" style="background-image: url(assets/img/education/showcase-1.webp);">
       <div class="container position-relative">
-        <h1>Contact</h1>
-        <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam
-          molestias.</p>
+        <h1>Contact Us</h1>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Our School</a></li>
             <li class="current">Contact</li>
           </ol>
         </nav>
@@ -146,7 +138,7 @@
       <!-- Google Maps (Full Width) -->
       <div class="map-section" data-aos="fade-up" data-aos-delay="200">
         <iframe
-          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.092773411881!2d37.018443149999996!3d-1.09269865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f46202a130dc1%3A0x53c12a86c31f69cb!2sJKUAT%20Dam!5e0!3m2!1sen!2ske!4v1761547548331!5m2!1sen!2ske"
           width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
@@ -248,7 +240,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Quick Links</h4>
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Our School</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="admissions.html">Admissions</a></li>
             <li><a href="academics.html">Academics</a></li>
@@ -260,7 +252,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Academics</h4>
           <ul>
-            <li><a href="campus-facilities.html">School Facilities</a></li>
+            <li><a href="our-facilities.html">School Facilities</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="community.html">Community Engagement</a></li>
             <li><a href="news.html">News & Updates</a></li>
@@ -274,7 +266,6 @@
             <li><a href="privacy.html">Privacy Policy</a></li>
             <li><a href="feedback.html">Feedback</a></li>
             <li><a href="portal.html">Portal Login</a></li>
-            <li><a href="alumni.html">Alumni</a></li>
           </ul>
         </div>
 
@@ -284,7 +275,7 @@
           <ul>
             <li><a href="financial-aid.html">Financial Aid</a></li>
             <li><a href="select-btw.html">Business plan &amp; school polices</a></li>
-            <li><a href="student-life.html">Student Life</a></li>
+            <li><a href="student-life.html">Extra-Curricular</a></li>
             <li><a href="employ.html">Employment</a></li>
           </ul>
         </div>
