--- a/portal.html
+++ b/portal.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Home - Brenitoch</title>
+  <title>home - Brenitoch</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -44,13 +44,13 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="index.html" class="active">home</a></li>
           <li class="dropdown"><a href="about.html"><span>About</span> <i
                 class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
-              <li><a href="students-life.html">Student Life</a></li>
-              <li><a href="campus-facilities.html">School Facilities &amp; Programs</a></li>
+              <li><a href="students-life.html">Extra-Curricular</a></li>
+              <li><a href="our-facilities.html">School Facilities &amp; Programs</a></li>
 
             </ul>
           </li>
@@ -69,7 +69,6 @@
               <li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
               <li><a href="portal.html">Portal Login</a></li>
               <li><a href="community.html">Community Engagement</a></li>
-              <li><a href="news.html">News</a></li>
             </ul>
           </li>
 
@@ -89,7 +88,7 @@
         <p>A smarter, faster, and more connected way to access everything Brenitoch — launching soon!</p>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">home</a></li>
             <li class="current">Portal Login</li>
           </ol>
         </nav>
@@ -217,7 +216,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Quick Links</h4>
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">home</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="admissions.html">Admissions</a></li>
             <li><a href="academics.html">Academics</a></li>
@@ -229,7 +228,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Academics</h4>
           <ul>
-            <li><a href="campus-facilities.html">School Facilities</a></li>
+            <li><a href="our-facilities.html">School Facilities</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="community.html">Community Engagement</a></li>
             <li><a href="news.html">News & Updates</a></li>
@@ -253,7 +252,7 @@
           <ul>
             <li><a href="financial-aid.html">Financial Aid</a></li>
             <li><a href="select-btw.html">Business plan &amp; school polices</a></li>
-            <li><a href="student-life.html">Student Life</a></li>
+            <li><a href="student-life.html">Extra-Curricular</a></li>
             <li><a href="employ.html">Employment</a></li>
           </ul>
         </div>
