--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<title>Home - Brenitoch</title>
+	<title>home - Brenitoch</title>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 
@@ -42,13 +42,13 @@
 
             <nav id="navmenu" class="navmenu">
                 <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="index.html" class="active">home</a></li>
                     <li class="dropdown"><a href="about.html"><span>About</span> <i
                                 class="bi bi-chevron-down toggle-dropdown"></i></a>
                         <ul>
                             <li><a href="about.html">About Us</a></li>
-                            <li><a href="students-life.html">Student Life</a></li>
-                            <li><a href="campus-facilities.html">School Facilities &amp; Programs</a></li>
+                            <li><a href="students-life.html">Extra-Curricular</a></li>
+                            <li><a href="our-facilities.html">School Facilities &amp; Programs</a></li>
 
                         </ul>
                     </li>
@@ -67,7 +67,6 @@
                             <li><a href="scholarship-aid.html">Financial Aid &amp; Scholarships</a></li>
                             <li><a href="portal.html">Portal Login</a></li>
                             <li><a href="community.html">Community Engagement</a></li>
-                            <li><a href="news.html">News</a></li>
                         </ul>
                     </li>
 
@@ -87,7 +86,7 @@
         <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">home</a></li>
             <li class="current">Privacy</li>
           </ol>
         </nav>
@@ -243,7 +242,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="#">home</a></li>
             <li><a href="#">About us</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Terms of service</a></li>
